--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 
 title: Quantrack Blog
 description: Welcome to Quantrack Blog # this means to ignore newlines until "baseurl:"
-baseurl: "/galada" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://quantrack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
