--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Quantrack Blog
 description: Welcome to Quantrack Blog # this means to ignore newlines until "baseurl:"
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "quantrack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://quantrack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
