--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.
 
 #-------------------------------
 # Build settings
-markdown: maruku
+markdown: kramdown
 permalink: ':title/'
 plugins:
   - jekyll-paginate
