--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Quantrack
 description: Welcome to Quantrack Blog # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "blog" # the subpath of your site, e.g. /blog
 url: "quantrack-lab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
